Fixed bugs related to Analytics tab charts not showing and Subscription tab payment not working

--- a/css/plan.css
+++ b/css/plan.css
@@ -104,10 +104,6 @@
     text-align: center;
 }
 
-.text-orange {
-    color: var(--accent);
-}
-
 .text-white {
     color: var(--text-light);
 }
